samples/_failures_safe/1761152259_dbf3b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2aa07759.c: In function ‘main’:
./samples/SAFE/__tmp_2aa07759.c:144:9: error: expected expression at end of input
  144 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_2aa07759.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2aa07759.c:144:9: error: expected declaration or statement at end of input
